--- a/public/front/css/comment.css
+++ b/public/front/css/comment.css
@@ -103,3 +103,30 @@ img {
 .lt_footer li.now p {
     color: darkorange;
 }
+
+.lt_main {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.lt_search {
+    padding: 10px;
+    position: relative;
+}
+
+.lt_search input {
+    height: 34px;
+    line-height: 40px;
+    font-size: 12px;
+    border-radius: 5px;
+    border-color: #007aff;
+}
+
+.lt_search button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border-radius: 0 5px 5px 0;
+    height: 34px;
+}
